Added ability to relaunch, configured unimplemented GUI