@@ -10,10 +10,12 @@ import com.github.egubot.gui.GUIApplication;
 import com.github.egubot.storage.ConfigManager;
 
 public class Run {
+	private static String[] args;
+	private static String title;
 
 	public static void main(String[] args) {
 		try {
-
+			Run.setArgs(args);
 			// For the GUI, not implemented so keep commented
 			if (ConfigManager.getBooleanProperty("CommandLine_Version"))
 				runInConsole(args);
@@ -36,23 +38,12 @@ public class Run {
 		 */
 		Console console = System.console();
 
-		String title = "Discord Bot";
-		for (String arg : args) {
-			if (arg.toLowerCase().contains("title:")) {
-				title = arg.replaceAll("[-\"]", "").replaceAll("(?i)title:", "");
-				break;
-			}
-		}
-		if (title.isBlank()) {
-			title = "Discord Bot";
-		}
+		getCmdTitle(args);
+		
 		// If the bot isn't already in a console it runs the main method
-		if (console == null && !GraphicsEnvironment.isHeadless()) {
+		if (console == null && !GraphicsEnvironment.isHeadless() && getJarName().contains(".jar")) {
 			try {
-
-				Runtime.getRuntime()
-						.exec(new String[] { "cmd", "/K", "Start \"" + title + "\" java -Xms100m -Xmx800m -jar "
-								+ getJarName() + " " + String.join(" ", args) + "&& exit", });
+				Runtime.getRuntime().exec(getRunCommand(args, getTitle()));
 			} catch (Exception e) {
 				// If you're not on windows just run the bot through the
 				// terminal or create a shell script for it.
@@ -64,6 +55,24 @@ public class Run {
 		}
 	}
 
+	public static void getCmdTitle(String[] args) {
+		setTitle("Discord Bot");
+		for (String arg : args) {
+			if (arg.toLowerCase().contains("title:")) {
+				setTitle(arg.replaceAll("[-\"]", "").replaceAll("(?i)title:", ""));
+				break;
+			}
+		}
+		if (getTitle().isBlank()) {
+			setTitle("Discord Bot");
+		}
+	}
+
+	public static String[] getRunCommand(String[] args, String title) {
+		return new String[] { "cmd", "/K", "Start \"" + title + "\" java -Xms100m -Xmx800m -jar " + getJarName() + " "
+				+ String.join(" ", args) + "&& exit", };
+	}
+
 	public static String getJarName() {
 		String jar;
 		try {
@@ -73,6 +82,22 @@ public class Run {
 			jar = "bot.jar";
 		}
 		return jar;
+	}
+
+	public static String[] getArgs() {
+		return args;
+	}
+
+	public static void setArgs(String[] args) {
+		Run.args = args;
+	}
+
+	public static String getTitle() {
+		return title;
+	}
+
+	public static void setTitle(String title) {
+		Run.title = title;
 	}
 
 }
